2007-06-27  Denis Washington  <denisw@svn.gnome.org>

	* appearance-themes.c: (theme_list_sort_func, themes_init):
	Load the metatheme thumbnails in the order they are in the list.

2007-06-27  Denis Washington  <denisw@svn.gnome.org>

	* appearance.h:
	* appearance-themes.c: (theme_list_sort_func, themes_init):
	Make the Custom theme always the first in the list and make it's label bold
	to diffentiate it from the other themes.

2007-06-26  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_is_equal): ... and actually accept an empty
	color scheme setting as valid

2007-06-26  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (prepare_list):
	no need to reassign thumbnails inside the loop

	* appearance-themes.c: (theme_load_from_gconf), (theme_is_equal):
	consider NULL and "" equal for color schemes; also reshuffle
	functions a bit and fix the include list

2007-06-26  Denis Washington  <denisw@svn.gnome.org>

	* gtk-theme-thumbnailing.png:
	* icon-theme-thumbnailing.png:
	* window-theme-thumbnailing.png:
	Placeholder thumbnails for gtk+, metacity and icon themes.

	* Makefile.am: Add new files.

	* appearance.h:
	* appearance-style.h:
	* appearance-style.c: (style_init), (style_shutdown), (prepare_list):
	Use the new placeholder thumbnails for the details window's theme lists.

	* appearance-main.c: Call new style_shutdown ().

2007-06-25  Denis Washington  <denisw@svn.gnome.org>

	* appearance.glade: Fixed resize problems.

2007-06-25  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (prepare_list): don't try to use uninitialized
	GdkPixbuf

2007-06-25  Denis Washington  <denisw@svn.gnome.org>

	* appearance-themes.c:
	Adjusted for the API changes in theme-thumbnail.c. Thumbnail requestes are
	now directly queued by generate_*_async(), so do not maintain an own queue
	anymore.

	* appearance-style.c:
	Use the new asynchronous thumbnail generation functions, and replace all